Change history


Master
------
- ILF-3: Store sensitive apple data in separate file


Version 0.5.0, 2017-11-03
-------------------------
- Change log line to correctly identify program as Locations2Domoticz
- For testing purposes make communicating with Domoticz optional
- Switch to requests package for Domoticz communication
- More robust error handling when communication with Domoticz
- Renamed project to iCloudLocationFetcher
- ILF-1: Make script Domoticz unaware but allow any URL to be called